--- a/trunk/arrg/ua_robots/wubble_arm_description/controllers/wubble_arm_controllers.yaml
+++ b/trunk/arrg/ua_robots/wubble_arm_description/controllers/wubble_arm_controllers.yaml
@@ -6,33 +6,33 @@ shoulder_pitch_controller:
     i: 10.0
     d: 50.0
 
-shoulder_yaw_controller:
+shoulder_pan_controller:
   type: robot_mechanism_controllers/JointPositionController
-  joint: shoulder_yaw_joint
+  joint: shoulder_pan_joint
   pid:
     p: 80.0
     i: 10.0
     d: 50.0
 
-shoulder_roll_controller:
+upperarm_roll_controller:
   type: robot_mechanism_controllers/JointPositionController
-  joint: shoulder_roll_joint
+  joint: upperarm_roll_joint
   pid:
     p: 80.0
     i: 10.0
     d: 50.0
 
-elbow_pitch_controller:
+elbow_flex_controller:
   type: robot_mechanism_controllers/JointPositionController
-  joint: elbow_pitch_joint
+  joint: elbow_flex_joint
   pid:
     p: 80.0
     i: 10.0
     d: 50.0
 
-wrist_roll_controller:
+forearm_roll_controller:
   type: robot_mechanism_controllers/JointPositionController
-  joint: wrist_roll_joint
+  joint: forearm_roll_joint
   pid:
     p: 80.0
     i: 10.0
@@ -46,15 +46,15 @@ wrist_pitch_controller:
     i: 10.0
     d: 50.0
 
-wrist_yaw_controller:
+wrist_roll_controller:
   type: robot_mechanism_controllers/JointPositionController
-  joint: wrist_yaw_joint
+  joint: wrist_roll_joint
   pid:
     p: 80.0
     i: 10.0
     d: 50.0
 
-gripper_left_finger_controller:
+left_finger_controller:
   type: robot_mechanism_controllers/JointPositionController
   joint: left_finger_joint
   pid:
@@ -62,7 +62,7 @@ gripper_left_finger_controller:
     i: 10.0
     d: 50.0
 
-gripper_right_finger_controller:
+right_finger_controller:
   type: robot_mechanism_controllers/JointPositionController
   joint: right_finger_joint
   pid:
