--- a/trunk/arrg/ua_robots/wubble_description/params/w2_arm_controllers.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/params/w2_arm_controllers.yaml
@@ -2,44 +2,44 @@ l_arm_controller:
   type: "robot_mechanism_controllers/JointTrajectoryActionController"
   joints:
     - shoulder_pitch_joint
-    - shoulder_yaw_joint
-    - shoulder_roll_joint
-    - elbow_pitch_joint
-    - wrist_roll_joint
+    - shoulder_pan_joint
+    - upperarm_roll_joint
+    - elbow_flex_joint
+    - forearm_roll_joint
     - wrist_pitch_joint
-    - wrist_yaw_joint
+    - wrist_roll_joint
   gains:
     shoulder_pitch_joint: {p: 800.0, d: 10.0}
-    shoulder_yaw_joint: {p: 800.0, d: 10.0}
-    shoulder_roll_joint: {p: 200.0, d: 3.0}
-    elbow_pitch_joint: {p: 100.0, d: 3.0}
-    wrist_roll_joint: {p: 500.0, d: 6.0}
+    shoulder_pan_joint: {p: 800.0, d: 10.0}
+    upperarm_roll_joint: {p: 200.0, d: 3.0}
+    elbow_flex_joint: {p: 100.0, d: 3.0}
+    forearm_roll_joint: {p: 500.0, d: 6.0}
     wrist_pitch_joint: {p: 400.0, d: 4.0}
-    wrist_yaw_joint: {p: 400.0, d: 4.0}
+    wrist_roll_joint: {p: 400.0, d: 4.0}
 
   joint_trajectory_action_node:
     joints:
       - shoulder_pitch_joint
-      - shoulder_yaw_joint
-      - shoulder_roll_joint
-      - elbow_pitch_joint
-      - wrist_roll_joint
+      - shoulder_pan_joint
+      - upperarm_roll_joint
+      - elbow_flex_joint
+      - forearm_roll_joint
       - wrist_pitch_joint
-      - wrist_yaw_joint
+      - wrist_roll_joint
     constraints:
       goal_time: 0.6
       shoulder_pitch_joint:
         goal: 0.02
-      shoulder_yaw_joint:
+      shoulder_pan_joint:
         goal: 0.02
-      shoulder_roll_joint:
+      upperarm_roll_joint:
         goal: 0.02
-      elbow_pitch_joint:
+      elbow_flex_joint:
         goal: 0.02
-      wrist_roll_joint:
+      forearm_roll_joint:
         goal: 0.02
       wrist_pitch_joint:
         goal: 0.02
-      wrist_yaw_joint:
+      wrist_roll_joint:
         goal: 0.02
 
