make planning work by disabling collisions between fingers and wrist_pitch link, not sure why yet

--- a/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
+++ b/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
@@ -45,3 +45,11 @@ default_collision_operations:
     object2: L5_forearm_roll_link
     operation: disable
 
+  - object1: L8_left_finger_link
+    object2: L6_wrist_pitch_link
+    operation: disable
+
+  - object1: L9_right_finger_link
+    object2: L6_wrist_pitch_link
+    operation: disable
+
