--- a/trunk/arrg/ua_apps/wubble2_robot/config/wubble_hand_description.yaml
+++ b/trunk/arrg/ua_apps/wubble2_robot/config/wubble_hand_description.yaml
@@ -1,12 +1,12 @@
 hand_description:
   left_arm:
-    hand_frame: L7_wrist_yaw_link
+    hand_frame: L7_wrist_roll_link
     robot_frame: base_link
     attached_objects_name: attached
     attach_link: L8_left_finger_link
     hand_group_name: l_end_effector
     arm_group_name: left_arm
     hand_joints: [left_finger_joint, right_finger_joint]
-    hand_touch_links: [L7_wrist_yaw_link, L8_left_finger_link, L9_right_finger_link]
+    hand_touch_links: [L7_wrist_roll_link, L8_left_finger_link, L9_right_finger_link]
     hand_fingertip_links: [L8_left_finger_link, L9_right_finger_link]
     hand_approach_direction: [1.0, 0.0, 0.0]
