--- a/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
+++ b/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
@@ -13,8 +13,12 @@ default_collision_operations:
     object2: left_arm
     operation: enable
 
+  - object1: robot_body
+    object2: L1_shoulder_pitch_link
+    operation: disable
+
   - object1: L1_shoulder_pitch_link
-    object2: robot_body
+    object2: L2_shoulder_pan_link
     operation: disable
 
   - object1: L2_shoulder_pan_link
@@ -31,6 +35,10 @@ default_collision_operations:
 
   - object1: L5_forearm_roll_link
     object2: L6_wrist_pitch_link
+    operation: disable
+
+  - object1: L6_wrist_pitch_link
+    object2: L7_wrist_roll_link
     operation: disable
 
   - object1: L7_wrist_roll_link
