--- a/arrg/ua_verbs/verb_learning/.classpath
+++ b/arrg/ua_verbs/verb_learning/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry excluding="verb_learning/" kind="src" path="src">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/dhewlett/ros/ros_experimental/rosjava/bin"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/opt/ros/diamondback/stacks/client_rosjava/rosjava/bin"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="rosjava"/>
@@ -42,5 +42,40 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="wubble_world_2d/natives/linux"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/commons-cli.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/FengGUI-Optional.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/FengGUI.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/ibxm.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/JBox2D-2.0.1-b250-Full.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/jbox2d-2.0.1-library-only.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/jinput.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/jnlp.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/jorbis-0.0.15.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/logback-classic.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/logback-core.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/lwjgl_util_applet.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/lwjgl-debug.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/lwjgl.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/packulike.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/pedigree.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/QuickTimeDemo.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/scalar.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/slick-examples.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/slick-sources.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/slick-util.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/slick.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/sqlitejdbc-v056.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/tinylinepp.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/TWL.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/xpp3_xpath-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/wubble_world_2d/wubble_svn/lib/xuggle-xuggler.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
