Update all urdfs to use collada dae files for collision meshes, update ompl configuration to work with Diamondback

--- a/arrg/ua_robots/wubble_description/params/w2_collision_map_sources.yaml
+++ b/arrg/ua_robots/wubble_description/params/w2_collision_map_sources.yaml
@@ -1,5 +1,5 @@
 cloud_sources:
-  - name: full_cloud_filtered
+  - name: neck_scan/full_cloud_filtered
     frame_subsample: 1
     point_subsample: 1
     sensor_frame: neck_scan_link
