--- a/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
+++ b/arrg/ua_robots/wubble_description/params/w2_collision_checks_arm.yaml
@@ -14,6 +14,10 @@ default_collision_operations:
     operation: enable
 
   - object1: robot_body
+    object2: L0_base_link
+    operation: disable
+
+  - object1: robot_body
     object2: L1_shoulder_pitch_link
     operation: disable
 
