--- a/arrg/ua_robots/wubble_description/params/w2_ompl_planning_configs.yaml
+++ b/arrg/ua_robots/wubble_description/params/w2_ompl_planning_configs.yaml
@@ -1,93 +1,68 @@
-## This file should be loaded under ompl_planning
-
 ## the list of groups for which motion planning can be performed
-group_list:
-  left_arm
+groups: 
+  - left_arm_cartesian
+  - left_arm
 
 ## the planner configurations; each config must have a type, which specifies
 ## the planner to be used; other parameters can be specified as well, depending 
 ## on the planner
 
+left_arm: 
+  planner_type: JointPlanner
+  planner_configs:
+    - SBLkConfig1 
+    - LBKPIECEkConfig1
+  kinematics_solver: wubble_arm_kinematics/WubbleArmKinematicsPlugin
+  redundancy:
+    name: upperarm_roll_joint
+  tip_name: L7_wrist_roll_link
+  root_name: L0_base_link
+  projection_evaluator: joint_state
+
+left_arm_cartesian:
+  parent_frame: L0_base_link
+  physical_group: left_arm
+  planner_type: RPYIKTaskSpacePlanner
+  state_spaces:
+    - x
+    - y
+    - z
+    - roll
+    - pitch
+    - yaw
+    - upperarm_roll_joint
+  x:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  y:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  z:
+    type: Linear
+    min: -2.0
+    max: 2.0
+  roll:
+    type: Revolute
+  pitch:
+    type: Revolute
+  yaw:
+    type: Revolute
+  planner_configs:
+    - SBLkConfig1 
+    - LBKPIECEkConfig1
+  kinematics_solver: wubble_arm_kinematics/WubbleArmKinematicsPlugin
+  tip_name: L7_wrist_roll_link
+  root_name: L0_base_link
+  projection_evaluator: joint_state
+  longest_valid_segment_fraction: 0.001
+
 planner_configs:
-  
-  armIKConfig1:
-    type: GAIK
-
-  pRRTkConfig1:
-    type: kinematic::pRRT
-    range: 0.75
-    thread_count: 2
-    
-  RRTkConfig1:
-    type: kinematic::RRT
-    range: 0.75
-
-  RRTdConfig1:
-    type: dynamic::RRT
-
-  LazyRRTkConfig1:
-    type: kinematic::LazyRRT
-    range: 0.75
-
   SBLkConfig1:
     type: kinematic::SBL
-    projection: 0 1
-    celldim: 1 1
-    range: 0.5
-    
-  pSBLkConfig1:
-    type: kinematic::pSBL
-    projection: 0 1
-    celldim: 1 1
-    range: 0.5
-    
-  KPIECEkConfig1:
-    type: kinematic::KPIECE
-    projection: 0 1
-    celldim: 1 1
-    range: 0.5
-
-  KPIECEdConfig1:
-    type: dynamic::KPIECE
-    projection: 0 1
-    celldim: 0.5 0.5
-
-  RRTkConfig2:
-    type: kinematic::RRT
-    range: 0.75
-
-  SBLkConfig2:
-    type: kinematic::SBL
-    projection: 5 6
-    celldim: 0.1 0.1
-  
-  KPIECEkConfig2l:
-    type: kinematic::KPIECE
-    projection: link L7_wrist_roll_link
-    celldim: 0.1 0.1 0.1
 
   LBKPIECEkConfig1:
     type: kinematic::LBKPIECE
-    projection: 5 6
-    celldim: 0.1 0.1
-
-  LBKPIECEkConfig2l:
-    type: kinematic::LBKPIECE
-    projection: link L7_wrist_roll_link
-    celldim: 0.1 0.1 0.1
-
-## the definition of the planners that go in each group
-groups:
-
-  - name: robot_body
-    planner_configs:
-      RRTkConfig1 RRTdConfig1 LazyRRTkConfig1 SBLkConfig1 KPIECEkConfig1 KPIECEdConfig1
-
-  - name: left_arm
-    planner_configs:
-      RRTkConfig2 SBLkConfig2 KPIECEkConfig1 KPIECEkConfig2l LBKPIECEkConfig2l armIKConfig1
-
-  - name: arms
-    planner_configs:
-      RRTkConfig2 SBLkConfig2
-
+    
+publish_diagnostics: true
