--- a/arrg/ua_apps/wubble2_robot/config/wubble_arm.yaml
+++ b/arrg/ua_apps/wubble2_robot/config/wubble_arm.yaml
@@ -1,8 +1,8 @@
 shoulder_pitch_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: shoulder_pitch_joint
     joint_speed: 1.17
     motor:
@@ -13,9 +13,9 @@ shoulder_pitch_controller:
 
 shoulder_pan_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: shoulder_pan_joint
     joint_speed: 1.17
     motor:
@@ -26,9 +26,9 @@ shoulder_pan_controller:
 
 upperarm_roll_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: upperarm_roll_joint
     joint_speed: 1.17
     motor:
@@ -39,9 +39,9 @@ upperarm_roll_controller:
 
 elbow_flex_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: elbow_flex_joint
     joint_speed: 1.17
     motor:
@@ -52,9 +52,9 @@ elbow_flex_controller:
 
 forearm_roll_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: forearm_roll_joint
     joint_speed: 1.17
     motor:
@@ -65,9 +65,9 @@ forearm_roll_controller:
 
 wrist_pitch_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: wrist_pitch_joint
     joint_speed: 1.17
     motor:
@@ -78,9 +78,9 @@ wrist_pitch_controller:
 
 wrist_roll_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: wrist_roll_joint
     joint_speed: 1.17
     motor:
