--- a/arrg/ua_controllers/charlie_controllers/config/arm_rfid.yaml
+++ b/arrg/ua_controllers/charlie_controllers/config/arm_rfid.yaml
@@ -1,8 +1,8 @@
 rfid_shoulder_pan_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: shoulder_pan_joint
     joint_speed: 2
     motor:
@@ -13,9 +13,9 @@ rfid_shoulder_pan_controller:
 
 rfid_elbow_tilt_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: shoulder_pan_joint
     joint_speed: 2
     motor:
@@ -26,9 +26,9 @@ rfid_elbow_tilt_controller:
 
 rfid_wrist_tilt_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: wrist_rotate_joint
     joint_speed: 2
     motor:
