--- a/arrg/ua_controllers/wubble_controllers/config/laser_tilt.yaml
+++ b/arrg/ua_controllers/wubble_controllers/config/laser_tilt.yaml
@@ -1,8 +1,8 @@
 laser_tilt_controller:
     controller:
-        package: ax12_controller_core
+        package: dynamixel_controllers
         module: joint_position_controller
-        type: JointPositionControllerAX12
+        type: JointPositionController
     joint_name: hokuyo_tilt_joint
     joint_speed: 1.17
     motor:
