Add an option of specifying margin and slope values for motors driving any joint controller.

--- a/arrg/ua_experimental/dynamixel_hardware_interface/config/controller_configuration.yaml
+++ b/arrg/ua_experimental/dynamixel_hardware_interface/config/controller_configuration.yaml
@@ -7,6 +7,8 @@ pan_controller:
           init: 512
           min: 0
           max: 1023
+          compliance_margin: 2
+          compliance_slope: 64
 
 tilt_controller:
     type: dynamixel_hardware_interface/JointPositionController
@@ -47,6 +49,8 @@ dual_motor_controller:
           init: 511
           min: 0
           max: 1023
+          compliance_margin: 4
+          compliance_slope: 128
         - id: 13
           reversed: true
 
